--- a/app/app/index.html
+++ b/app/app/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="manifest" href="../app/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Pomodoro Pie">
+  <meta name="apple-mobile-web-app-title" content="Pomocycle">
   <link rel="apple-touch-icon" href="images/icon.png">
   <meta name="msapplication-TileImage" content="images/icon.png">
   <meta name="msapplication-TileColor" content="#F44336">
-  <title>Pomodoro Pie</title>
+  <title>Pomocycle</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="theme-color" content="#F44336">
   <meta name="mobile-web-app-capable" content="yes">
@@ -83,7 +83,7 @@
       outline: none;
     }
   </style>
-  <link rel="stylesheet" href="../app/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="root"><div class="pomocycle"><div class="timer"><div class="timer-clock"><svg width="420" height="420"><circle cx="210" cy="210" r="200" style="fill: transparent; stroke: white; stroke-width: 10; stroke-dasharray: 0, 1.5e+06; transition: stroke-dasharray 1s linear;"></circle></svg></div><h1 class="timer-text">00:00</h1></div><div class="stages"><div class="stages-item"><svg width="34" height="34"><circle cx="17" cy="17" r="10" style="fill: transparent; stroke: rgb(183, 28, 28); transition: all 300ms cubic-bezier(0.4, 0, 0, 1);"></circle><path d="M 15, 10
@@ -107,12 +107,13 @@
           M 19, 14
           L 15, 14
             19, 10" style="fill: transparent; stroke: rgb(183, 28, 28); transition: all 300ms cubic-bezier(0.4, 0, 0, 1);"></path></svg></div></div><div class="control-btns"><div></div><button class="btn" id="startPomodoro">POMODORO</button><div></div><div></div></div></div></div>
+  <script src="dist/bundle.js"></script>
   <script>
-    (function(){
-      require('babel-register');
-      var app = require('./render.dom.js');
-      app.render('.App-container');
-    })();
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('./sw.js')
+        .then(() => {console.log('Service Worker registered.')})
+    }
   </script>
 </body>
 </html>
